--- a/index.html
+++ b/index.html
@@ -1,1 +1,145 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Мое резюме</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link href = "https://fonts.googleapis.com/css2? family = Montserrat: ital, wght @ 1,300 & display = swap" rel = "stylesheet">
+</head>
+<body>
+    <!-- main container -->
+    <div class="wrapper">
+        <aside class="sidebar">
+            <img class="my-photo" src="./img/61093151.jpg" alt="My photo">
+            <div class="main-container">
+                <!-- Contacts container -->
+                <div class="contacts-container">
+                    <h3 class="contacts-title">Контакты</h3>
+                    <div>
+                        <span class="contacts-link-type">Тел:</span> 
+                        <a class="contacts-link" href="tel:+7 910 440 36 39">+7 910 440 36 39</a>
+                    </div>
+                    <div>
+                        <span class="contacts-link-type">Почта:</span>
+                        <a class="contacts-link" href="russik27@mail.ru">russik27@mail.ru</a>
+                    </div>
+                </div>
+                <!-- Tech skills container -->
+                <div class="tech-skill-container">
+                    <h3 class="tech-skill-title">Технические навыки</h3>
+                    <ul>
+                        <li class="tech-skill-item">
+                            <span class="tech-skill-text">HTML5</span>
+                        </li>
+                        <li class="tech-skill-item">
+                            <span class="tech-skill-text">CSS3</span>
+                        </li>
+                        <li class="tech-skill-item">
+                            <span class="tech-skill-text">GIT</span>
+                        </li>
+                        <li class="tech-skill-item">
+                            <span class="tech-skill-text">Python</span>
+                        </li>
+                        <li class="tech-skill-item">
+                            <span class="tech-skill-text">Flask</span>
+                        </li>
+                        <li class="tech-skill-item">
+                            <span class="tech-skill-text">Bootstrap</span>
+                        </li>
+                        <li class="tech-skill-item">
+                            <span class="tech-skill-text">Sqlalchemy</span>
+                        </li>
+                        <li class="tech-skill-item">
+                            <span class="tech-skill-text">Django</span>
+                        </li>
+                    </ul>
+                </div>            
+                <!-- Soft skills container -->
+                <div class="soft-skills-container">
+                    <h3 class="soft-skills-title">Другие навыки</h3>
+                    <ul>
+                        <li class="soft-skills-item">
+                            <span class="soft-skills-text">Ответственный</span>
+                        </li>
+                        <li class="soft-skills-item">
+                            <span class="soft-skills-text">Коммуникабельный</span>
+                        </li>
+                        <li class="soft-skills-item">
+                            <span class="soft-skills-text">Целеустремленный</span>
+                        </li>
+                        <li class="soft-skills-item">
+                            <span class="soft-skills-text">Общительный</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>  
+        </aside>
+        <!-- about me container -->
+        <div class="about-me-container">
+            <!-- about me main info -->
+            <div class="info-container">
+                <h2 class="profession">Junior Python-Разработчик</h2>
+                <h1 class="name">Русу Игорь</h1>
+                <p class="description">Ищу работу junior-python разработчик. Проработав в компании сервис-инженером,
+                    понял, что мне интересно, как устроены программы изнутри.
+                    Python, как язык, выбрал, потому что он прост в изучение и имеет широкую
+                    область применения. Хочу найти компанию, которая даст мне возможности профессионального развития и приумножит мои, уже полученные, знания.<br/>
+                    Прошел курс <b>"Learn Python"</b>
+                </p>
+            </div>
+            <!-- projects container -->
+            <div class="projects-container">
+                <h3 class="about-me-title">Проекты</h3>
+                <ol>
+                    <li class="projects-item">
+                        <a class="projects-link" href="https://russik83.github.io./">https://russik83.github.io./</a>
+                        <span class="dots">.......................</span>
+                        <span><b>[</b> <span class="tech-name">HTML5, CSS3</span> <b>]</b></span>
+                    </li>
+                    <li class="projects-item">
+                        <a class="projects-link" href="https://t.me/russikigbot">https://t.me/russikigbot</a>
+                        <span class="dots">...........................</span>
+                        <span><b>[</b> <span class="tech-name">Python</span> <b>]</b></span>
+                    </li>
+                    <li class="projects-item">
+                        <a class="projects-link" href="https://github.com/russik83/diploma">https://github.com/russik83/diploma</a>
+                        <span class="dots">........</span>
+                        <span><b>[</b> <span class="tech-name">Github</span> <b>]</b></span>
+                    </li>
+                </ol>
+            </div>
+            <!-- work expeience -->
+            <div>
+                <h3 class="about-me-title">Рабочий стаж</h3>
+                <div>
+                    <h4 class="profession-title">Монтажник/Сервисный-инженер  <span class="profession-company">"ТЕХНОЭЙР"</span></h4>
+                    <ul class="profession-duties">
+                        <li class="profession-duties-item">Систем кондиционирования и вентиляции воздуха.</li>
+                        <li class="profession-duties-item">Монтаж, ремонт и обслуживание климатического оборудования.</li>
+                        <li class="profession-duties-item">Продажа, установка, пусконаладка.</li>
+                        <li class="profession-duties-item">Водитель-экспедитор.</li>
+                        <li class="profession-duties-item">Доставка оборудования, расчет логистики, планирование графика.</li>
+                        <li class="profession-duties-item">Контроль документооборота, урегулирование вопросов с отделами</li>
+                        <p class="profession-duties-item">бухгалтерии и юр.отделами.</p>
+                    </ul>
+                </div>
+                <!-- Education -->
+                <div>
+                    <h3 class="about-me-title">Образование</h3>
+                    <h4 class="profession-ed">Среднее</h4>
+                    <span class="profession-time">
+                        September 1989 - June 1998 <span class="profession-divider"></span>
+                    </span>
+                    <h4><span class="profession-company">"Технологический колледж"</span></h4>
+                    <h6>(незаконченный, последний курс)</h6>
+                    <h4 class="profession-ed">Электромеханик</h4>
+                    <span class="profession-time">
+                        September 1999 - June 2002 <span class="profession-divider"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
